[gd_scene load_steps=2 format=3 uid="uid://ccyxjn27it1rx"]

[ext_resource type="Script" path="res://levels/HUD.gd" id="1_sbtff"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_sbtff")

[node name="HUDContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="DeliveryInfoContainer" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeliveryCount" type="Label" parent="HUDContainer/DeliveryInfoContainer"]
layout_mode = 2
text = "Delivery 1/35"

[node name="DeliveryTimer" type="Label" parent="HUDContainer/DeliveryInfoContainer"]
layout_mode = 2
text = "(30s)"

[node name="InfoContainer" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2

[node name="GlobalTimer" type="Label" parent="HUDContainer/InfoContainer"]
layout_mode = 2
text = "Remaining time 1:30"

[node name="GameMenuContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -50.5
offset_right = 179.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverData" type="VBoxContainer" parent="GameMenuContainer"]
visible = false
layout_mode = 2

[node name="GameOver" type="Label" parent="GameMenuContainer/GameOverData"]
layout_mode = 2
text = "Game Over (insert ici pourquoi)"
horizontal_alignment = 1

[node name="Label" type="Label" parent="GameMenuContainer/GameOverData"]
layout_mode = 2
text = "Points 12"
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="GameMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Restart" type="Button" parent="GameMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="Quit" type="Button" parent="GameMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="GameMenuContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="GameMenuContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameMenuContainer/Quit" to="." method="_on_quit_pressed"]
